add install statements for required files and directories of pulse

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -35,5 +35,18 @@ target_include_directories(${PROJECT_NAME} PUBLIC "$<BUILD_INTERFACE:${PROJECT_S
 target_include_directories(${PROJECT_NAME} PUBLIC "$<BUILD_INTERFACE:${PROJECT_SOURCE_DIR}/src>")
 target_include_directories(${PROJECT_NAME} PRIVATE "$<BUILD_INTERFACE:${Pulse_INCLUDE_DIRS}>")
 
+# install pulse components
+install(FILES     "${Pulse_DIR}/bin/UCEDefs.txt" DESTINATION "${CMAKE_CURRENT_BINARY_DIR}")
+install(DIRECTORY "${Pulse_DIR}/bin/config" DESTINATION "${CMAKE_CURRENT_BINARY_DIR}")
+install(DIRECTORY "${Pulse_DIR}/bin/ecg" DESTINATION "${CMAKE_CURRENT_BINARY_DIR}")
+install(DIRECTORY "${Pulse_DIR}/bin/environments" DESTINATION "${CMAKE_CURRENT_BINARY_DIR}")
+install(DIRECTORY "${Pulse_DIR}/bin/nutrition" DESTINATION "${CMAKE_CURRENT_BINARY_DIR}")
+install(DIRECTORY "${Pulse_DIR}/bin/patients" DESTINATION "${CMAKE_CURRENT_BINARY_DIR}")
+# install(DIRECTORY "${Pulse_DIR}/bin/resource" DESTINATION "${CMAKE_CURRENT_BINARY_DIR}")
+install(DIRECTORY "${Pulse_DIR}/bin/states" DESTINATION "${CMAKE_CURRENT_BINARY_DIR}")
+install(DIRECTORY "${Pulse_DIR}/bin/substances" DESTINATION "${CMAKE_CURRENT_BINARY_DIR}")
+install(DIRECTORY "${Pulse_DIR}/bin/verification/scenarios" OPTIONAL DESTINATION "${CMAKE_CURRENT_BINARY_DIR}")
+
+
 ## Install rules for the library; CMake package configurations files
 sofa_create_package(${PROJECT_NAME} ${PROJECT_VERSION} ${PROJECT_NAME} ${PROJECT_NAME})
