--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -15,6 +15,8 @@ list(APPEND HEADER_FILES
 
 list(APPEND SOURCE_FILES
     src/PulsePhysiology/main.cpp
+    src/PulsePhysiology/EngineUse.cpp
+    src/PulsePhysiology/EngineUse.h
 )
 
 
